[theoros] feat: `data_feeds` Handler + pragma-feeds (paused for cairo) (#25)
* feat(theoros_handlers): Handlers

* feat(theoros_handlers): AssetClass added

* feat(theoros_handlers): Test stuf

* feat(theoros_handlers): New feeds

* feat(theoros_handlers): Removed TODO

* feat(theoros_handlers):

* feat(theoros_handlers):

* feat(theoros_handlers): Get data feeds OK

* feat(theoros_handlers): Pragma feeds

* feat(theoros_handlers):

* feat(theoros_handlers): Sync parsing with dataparser 💀

* feat(theoros_handlers):

* feat(theoros_handlers):

* feat(theoros_handlers):
