# rust/theoros/src/handlers/get_data_feeds.rs
@@ -1,32 +1,34 @@
-use axum::extract::{Query, State};
+use axum::extract::State;
 use axum::Json;
 use serde::{Deserialize, Serialize};
-use utoipa::{IntoParams, ToResponse, ToSchema};
+use utoipa::{ToResponse, ToSchema};
+
+use pragma_feeds::Feed;
 
 use crate::errors::GetDataFeedsError;
 use crate::AppState;
 
-#[derive(Default, Deserialize, IntoParams, ToSchema)]
-pub struct GetDataFeedsQuery {}
-
 #[derive(Debug, Default, Serialize, Deserialize, ToResponse, ToSchema)]
-pub struct GetDataFeedsResponse(pub Vec<String>);
+pub struct GetDataFeedsResponse(pub Vec<Feed>);
 
 #[utoipa::path(
     get,
-    // TODO: path
-    path = "/v1/calldata",
+    path = "/v1/data_feeds",
     responses(
-        (status = 200, description = "Get all the available data feeds", body = [GetDataFeedsResponse])
-    ),
-    params(
-        GetDataFeedsQuery
+        (status = 200, description = "Get all the available feed ids", body = [GetDataFeedsResponse])
     ),
 )]
-pub async fn get_data_feeds(
-    State(_state): State<AppState>,
-    Query(_params): Query<GetDataFeedsQuery>,
-) -> Result<Json<GetDataFeedsResponse>, GetDataFeedsError> {
-    tracing::info!("Received get calldata request");
-    Ok(Json(GetDataFeedsResponse::default()))
+pub async fn get_data_feeds(State(state): State<AppState>) -> Result<Json<GetDataFeedsResponse>, GetDataFeedsError> {
+    tracing::info!("Received get all data feeds request");
+
+    let stored_feed_ids = state.storage.data_feeds();
+
+    let mut feeds = Vec::with_capacity(stored_feed_ids.len());
+    for feed_id in stored_feed_ids {
+        let feed = feed_id.parse().map_err(|_| GetDataFeedsError::ParsingFeedId(feed_id.clone()))?;
+        feeds.push(feed);
+    }
+
+    let response = GetDataFeedsResponse(feeds);
+    Ok(Json(response))
 }
